--- a/css/all.css
+++ b/css/all.css
@@ -3,6 +3,16 @@ img {
   max-width: 100%;
 }
 
+a:focus,
+button:active,
+button:focus,
+area:active,
+area:focus {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  outline: 0;
+}
+
 html,
 body {
   width: 100%;
@@ -11,22 +21,34 @@ body {
   font-family: "Noto Sans TC", -apple-system, BlinkMacSystemFont, "Segoe UI", "Microsoft JhengHei", Roboto, "Helvetica Neue", Arial, sans-serif;
 }
 
+body {
+  background-color: #e9e6f7;
+}
+
+.mask {
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background-color: #fff;
+}
+
 .main {
   max-width: 720px;
   margin: 0 auto;
   overflow: hidden;
   position: relative;
+  -webkit-box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+          box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
-.main .see {
-  position: absolute;
-  width: 100%;
-  top: 0;
-  left: 0;
-  opacity: 0.3;
-  z-index: 0;
-  pointer-events: none;
-  z-index: 20;
+@media screen and (max-width: 720.98px) {
+  .main {
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
 }
 
 .scroll {
@@ -36,6 +58,32 @@ body {
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
   z-index: 99;
+  width: 10%;
+  max-width: 69px;
+  -webkit-animation: scrollAni 1s infinite alternate;
+          animation: scrollAni 1s infinite alternate;
+}
+
+@-webkit-keyframes scrollAni {
+  0% {
+    -webkit-transform: translate(-50%, 0);
+            transform: translate(-50%, 0);
+  }
+  100% {
+    -webkit-transform: translate(-50%, -20%);
+            transform: translate(-50%, -20%);
+  }
+}
+
+@keyframes scrollAni {
+  0% {
+    -webkit-transform: translate(-50%, 0);
+            transform: translate(-50%, 0);
+  }
+  100% {
+    -webkit-transform: translate(-50%, -20%);
+            transform: translate(-50%, -20%);
+  }
 }
 
 .section1 {
@@ -75,6 +123,11 @@ body {
 
 .section1__title {
   margin-bottom: 50px;
+  position: relative;
+  z-index: 5;
+  opacity: 0;
+  -webkit-transform: translateY(50px);
+          transform: translateY(50px);
 }
 
 @media screen and (max-width: 720.98px) {
@@ -89,6 +142,11 @@ body {
   text-align: center;
   letter-spacing: 8px;
   line-height: 1.75;
+  position: relative;
+  z-index: 5;
+  opacity: 0;
+  -webkit-transform: translateY(50px);
+          transform: translateY(50px);
 }
 
 @media screen and (max-width: 720.98px) {
@@ -101,13 +159,19 @@ body {
 .section1__desert {
   position: absolute;
   bottom: 0;
-  z-index: 2;
+  z-index: 8;
+  -webkit-transform: translateY(20px);
+          transform: translateY(20px);
+  opacity: 0;
 }
 
 .section1__patrickimg {
   position: absolute;
   bottom: 0;
   z-index: 10;
+  opacity: 0;
+  -webkit-transform: translateX(100px);
+          transform: translateX(100px);
 }
 
 .section1 .moon {
@@ -119,6 +183,9 @@ body {
   height: 55px;
   border-radius: 50%;
   background-color: #fff;
+  -webkit-transform: translateX(50px);
+          transform: translateX(50px);
+  opacity: 0;
 }
 
 @media screen and (max-width: 720.98px) {
@@ -134,6 +201,8 @@ body {
   right: 0;
   z-index: 5;
   width: 22%;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
 }
 
 .section1 .cloud2 {
@@ -142,6 +211,8 @@ body {
   left: 0;
   z-index: 5;
   width: 20%;
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
 }
 
 .section1 .cloud3 {
@@ -150,6 +221,186 @@ body {
   right: 0;
   z-index: 15;
   width: 56%;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+}
+
+.allstar {
+  width: 100%;
+  height: 60%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  pointer-events: none;
+  z-index: 1;
+  overflow: hidden;
+}
+
+[class^="star"] {
+  width: 2px;
+  height: 2px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.7);
+  -webkit-animation: falling 3s infinite;
+          animation: falling 3s infinite;
+}
+
+@media screen and (max-width: 720.98px) {
+  [class^="star"] {
+    -webkit-animation: falling 4s infinite;
+            animation: falling 4s infinite;
+  }
+}
+
+[class^="star"]:after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 40px;
+  height: 1px;
+  -webkit-transform: translate(36px, -16px) rotate(-45deg);
+          transform: translate(36px, -16px) rotate(-45deg);
+  background: -webkit-gradient(linear, left top, right top, from(white), to(rgba(255, 0, 0, 0)));
+  background: linear-gradient(to right, white, rgba(255, 0, 0, 0));
+}
+
+.star1 {
+  position: absolute;
+  top: -26.72223%;
+  left: 58.65594%;
+  -webkit-animation-delay: -0.5s;
+          animation-delay: -0.5s;
+}
+
+.star2 {
+  position: absolute;
+  top: 31.74988%;
+  left: 15.86052%;
+  -webkit-animation-delay: -1s;
+          animation-delay: -1s;
+}
+
+.star3 {
+  position: absolute;
+  top: 16.82581%;
+  left: 16.4352%;
+  -webkit-animation-delay: -1.5s;
+          animation-delay: -1.5s;
+}
+
+.star4 {
+  position: absolute;
+  top: -8.90978%;
+  left: 84.3501%;
+  -webkit-animation-delay: -2s;
+          animation-delay: -2s;
+}
+
+.star5 {
+  position: absolute;
+  top: -18.4421%;
+  left: 29.32209%;
+  -webkit-animation-delay: -2.5s;
+          animation-delay: -2.5s;
+}
+
+.star6 {
+  position: absolute;
+  top: 20.55433%;
+  left: 66.51093%;
+  -webkit-animation-delay: -3s;
+          animation-delay: -3s;
+}
+
+.star7 {
+  position: absolute;
+  top: 4.30448%;
+  left: 37.50881%;
+  -webkit-animation-delay: -3.5s;
+          animation-delay: -3.5s;
+}
+
+.star8 {
+  position: absolute;
+  top: 5.5237%;
+  left: 64.66986%;
+  -webkit-animation-delay: -4s;
+          animation-delay: -4s;
+}
+
+@-webkit-keyframes falling {
+  0%,
+  100% {
+    opacity: 0;
+  }
+  70% {
+    opacity: 1;
+  }
+  0% {
+    -webkit-transform: translate(350px, 0);
+            transform: translate(350px, 0);
+  }
+  100% {
+    -webkit-transform: translate(0, 400px);
+            transform: translate(0, 400px);
+  }
+}
+
+@keyframes falling {
+  0%,
+  100% {
+    opacity: 0;
+  }
+  70% {
+    opacity: 1;
+  }
+  0% {
+    -webkit-transform: translate(350px, 0);
+            transform: translate(350px, 0);
+  }
+  100% {
+    -webkit-transform: translate(0, 400px);
+            transform: translate(0, 400px);
+  }
+}
+
+@media screen and (max-width: 720.98px) {
+  @-webkit-keyframes falling {
+    0%,
+    100% {
+      opacity: 0;
+    }
+    70% {
+      opacity: 1;
+    }
+    0% {
+      -webkit-transform: translate(170px, 0);
+              transform: translate(170px, 0);
+    }
+    100% {
+      -webkit-transform: translate(0, 260px);
+              transform: translate(0, 260px);
+    }
+  }
+  @keyframes falling {
+    0%,
+    100% {
+      opacity: 0;
+    }
+    70% {
+      opacity: 1;
+    }
+    0% {
+      -webkit-transform: translate(170px, 0);
+              transform: translate(170px, 0);
+    }
+    100% {
+      -webkit-transform: translate(0, 260px);
+              transform: translate(0, 260px);
+    }
+  }
 }
 
 .section2 {
@@ -424,6 +675,8 @@ svg.waves {
 .moon__modal--btn {
   position: absolute;
   cursor: pointer;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 
 .moon__modal--btn.modal1 {
@@ -625,6 +878,76 @@ button#submit {
     padding: 0.5vw 5vw;
     border-radius: 5vw;
     font-size: 5vw;
+  }
+}
+
+.modal-dialog {
+  max-width: 620px;
+}
+
+.modal-content {
+  border: none;
+  border-radius: 20px;
+}
+
+.modal-header {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: none;
+  padding-bottom: 0;
+}
+
+.modal-header button {
+  opacity: 1;
+}
+
+.modal-header span {
+  display: block;
+  background-color: #7d79d1;
+  color: #fff;
+  padding: 10px;
+  font-size: 2rem;
+  border-radius: 100px;
+}
+
+@media screen and (max-width: 720.98px) {
+  .modal-header span {
+    font-size: 7vw;
+    padding: 1vw;
+  }
+}
+
+.modal-header .title {
+  color: #514cad;
+  font-size: 2rem;
+  margin-bottom: 0;
+  letter-spacing: 3px;
+}
+
+@media screen and (max-width: 720.98px) {
+  .modal-header .title {
+    font-size: 6vw;
+  }
+}
+
+.modal-body {
+  border: none;
+}
+
+.modal-body p {
+  color: #514cad;
+  font-size: 1.4rem;
+  letter-spacing: 2px;
+  line-height: 1.7;
+  margin-top: 15px;
+  margin-bottom: 0;
+}
+
+@media screen and (max-width: 720.98px) {
+  .modal-body p {
+    font-size: 4vw;
+    letter-spacing: 1px;
   }
 }
 /*# sourceMappingURL=all.css.map */
