--- a/sass/all.scss
+++ b/sass/all.scss
@@ -16,8 +16,8 @@ body {
   width: 100%;
   height: 100%;
   position: relative;
-  font-family: "Noto Sans TC", -apple-system, BlinkMacSystemFont, "Segoe UI", "Microsoft JhengHei", Roboto,
-    "Helvetica Neue", Arial, sans-serif;
+  font-family: "Noto Sans TC", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    "Microsoft JhengHei", Roboto, "Helvetica Neue", Arial, sans-serif;
 }
 body {
   background-color: #e9e6f7;
@@ -84,6 +84,7 @@ body {
       display: inline-block;
       width: 14.2%;
       height: auto;
+      opacity: 0;
     }
   }
   // main title
@@ -199,7 +200,11 @@ body {
     width: 40px;
     height: 1px;
     transform: translate(36px, -16px) rotate(-45deg);
-    background: linear-gradient(to right, rgba(255, 255, 255, 1), rgba(255, 0, 0, 0));
+    background: linear-gradient(
+      to right,
+      rgba(255, 255, 255, 1),
+      rgba(255, 0, 0, 0)
+    );
   }
 }
 @for $i from 1 through 8 {
