--- a/css/all.css
+++ b/css/all.css
@@ -18,7 +18,7 @@ body {
   width: 100%;
   height: 100%;
   position: relative;
-  font-family: "Noto Sans TC", -apple-system, BlinkMacSystemFont, "Segoe UI", "Microsoft JhengHei", Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-family: "Noto Sans TC", -apple-system, BlinkMacSystemFont, "Segoe UI", "Microsoft JhengHei", Roboto, "Helvetica Neue", Arial, sans-serif;
 }
 
 body {
@@ -269,64 +269,64 @@ body {
 
 .star1 {
   position: absolute;
-  top: -35.00184%;
-  left: 35.55021%;
+  top: -36.25381%;
+  left: 65.60788%;
   -webkit-animation-delay: -0.5s;
           animation-delay: -0.5s;
 }
 
 .star2 {
   position: absolute;
-  top: 30.0991%;
-  left: 78.56313%;
+  top: -33.33702%;
+  left: 42.2715%;
   -webkit-animation-delay: -1s;
           animation-delay: -1s;
 }
 
 .star3 {
   position: absolute;
-  top: -11.17421%;
-  left: 78.61369%;
+  top: 5.35389%;
+  left: 36.95651%;
   -webkit-animation-delay: -1.5s;
           animation-delay: -1.5s;
 }
 
 .star4 {
   position: absolute;
-  top: 24.38872%;
-  left: 67.49092%;
+  top: -8.87056%;
+  left: 81.63253%;
   -webkit-animation-delay: -2s;
           animation-delay: -2s;
 }
 
 .star5 {
   position: absolute;
-  top: 34.72717%;
-  left: 27.11604%;
+  top: 28.25861%;
+  left: 84.0634%;
   -webkit-animation-delay: -2.5s;
           animation-delay: -2.5s;
 }
 
 .star6 {
   position: absolute;
-  top: 25.72437%;
-  left: 33.86744%;
+  top: -12.2992%;
+  left: 7.87567%;
   -webkit-animation-delay: -3s;
           animation-delay: -3s;
 }
 
 .star7 {
   position: absolute;
-  top: 25.61535%;
-  left: 3.10226%;
+  top: 10.52569%;
+  left: 57.5023%;
   -webkit-animation-delay: -3.5s;
           animation-delay: -3.5s;
 }
 
 .star8 {
   position: absolute;
-  top: -38.5389%;
-  left: 12.4554%;
+  top: -35.8234%;
+  left: 41.03592%;
   -webkit-animation-delay: -4s;
           animation-delay: -4s;
 }
@@ -676,18 +676,16 @@ svg.waves {
 .moon__modal--btn {
   position: absolute;
   cursor: pointer;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
 }
 
 .moon__modal--btn img {
-  -webkit-transition: 0.6s;
-  transition: 0.6s;
+  -webkit-animation: moonjump 1s infinite alternate;
+          animation: moonjump 1s infinite alternate;
 }
 
-.moon__modal--btn:hover img {
-  -webkit-transform: translateY(-8px);
-          transform: translateY(-8px);
+.moon__modal--btn:hover {
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
 }
 
 .moon__modal--btn.modal1 {
@@ -704,16 +702,31 @@ svg.waves {
   }
 }
 
+.moon__modal--btn.modal1 img {
+  -webkit-animation-delay: 0;
+          animation-delay: 0;
+}
+
 .moon__modal--btn.modal2 {
   top: 17%;
   right: 14%;
   width: 15%;
 }
 
+.moon__modal--btn.modal2 img {
+  -webkit-animation-delay: 0.1s;
+          animation-delay: 0.1s;
+}
+
 .moon__modal--btn.modal3 {
   top: 55%;
   right: 14%;
   width: 16%;
+}
+
+.moon__modal--btn.modal3 img {
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s;
 }
 
 .moon__modal--btn.modal4 {
@@ -724,16 +737,53 @@ svg.waves {
   width: 20%;
 }
 
+.moon__modal--btn.modal4 img {
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s;
+}
+
 .moon__modal--btn.modal5 {
   top: 55%;
   left: 14%;
   width: 18%;
 }
 
+.moon__modal--btn.modal5 img {
+  -webkit-animation-delay: 0.4s;
+          animation-delay: 0.4s;
+}
+
 .moon__modal--btn.modal6 {
   top: 17%;
   left: 13%;
   width: 20%;
+}
+
+.moon__modal--btn.modal6 img {
+  -webkit-animation-delay: 0.5s;
+          animation-delay: 0.5s;
+}
+
+@-webkit-keyframes moonjump {
+  0% {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+  100% {
+    -webkit-transform: translateY(-10%);
+            transform: translateY(-10%);
+  }
+}
+
+@keyframes moonjump {
+  0% {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+  100% {
+    -webkit-transform: translateY(-10%);
+            transform: translateY(-10%);
+  }
 }
 
 .section4 {
