--- a/sass/all.scss
+++ b/sass/all.scss
@@ -16,8 +16,8 @@ body {
   width: 100%;
   height: 100%;
   position: relative;
-  font-family: "Noto Sans TC", -apple-system, BlinkMacSystemFont, "Segoe UI", "Microsoft JhengHei", Roboto,
-    "Helvetica Neue", Arial, sans-serif;
+  font-family: "Noto Sans TC", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    "Microsoft JhengHei", Roboto, "Helvetica Neue", Arial, sans-serif;
 }
 body {
   background-color: #e9e6f7;
@@ -119,7 +119,6 @@ body {
     position: absolute;
     bottom: 0;
     z-index: 8;
-    transform: translateY(20px);
     opacity: 0;
   }
   &__patrickimg {
@@ -200,13 +199,17 @@ body {
     width: 40px;
     height: 1px;
     transform: translate(36px, -16px) rotate(-45deg);
-    background: linear-gradient(to right, rgba(255, 255, 255, 1), rgba(255, 0, 0, 0));
+    background: linear-gradient(
+      to right,
+      rgba(255, 255, 255, 1),
+      rgba(255, 0, 0, 0)
+    );
   }
 }
 @for $i from 1 through 8 {
   .star#{$i} {
-    $posX: random() * 85%;
-    $posY: random() * -80% + 40%;
+    $posX: random() * 100%;
+    $posY: random() * -80% + 30%;
     position: absolute;
     top: $posY;
     left: $posX;
@@ -445,8 +448,8 @@ svg.waves {
     }
     &.modal1 {
       top: -3%;
-      left: 50%;
-      transform: translate(-50%);
+      left: 37%;
+      // transform: translate(-50%);
       width: 24%;
 
       @include media($pad) {
@@ -474,8 +477,7 @@ svg.waves {
     }
     &.modal4 {
       bottom: -3%;
-      left: 50%;
-      transform: translate(-50%);
+      left: 39%;
       width: 20%;
       img {
         animation-delay: 0.3s;
